# Hermes

./: .gbrain-source  .gitignore  CLAUDE.md
.github/workflow/: release.yml
.github/workflows/: release.yml
core/: Cargo.toml
core/bridge/src/: lib.rs
core/modules/provider-api/: Cargo.toml
core/modules/provider-api/src/: lib.rs
core/modules/provider-memory/: Cargo.toml
core/modules/provider-memory/src/: lib.rs
core/netease-api/: api.js  package-lock.json  package.json
core/src/: api_process.rs  graphics.rs  main.rs  protocol.rs
platform/stm32/: .gitignore  .mxproject  Makefile  STM32H750XX_FLASH.ld  platformio.ini  stm32.ioc
platform/stm32/Core/Inc/: stm32h7xx_hal_conf.h
platform/stm32/Core/Src/: main.c  stm32h7xx_it.c
platform/stm32/Drivers/User/Inc/: lcd_rgb.h  protocol_parser.h
platform/stm32/Drivers/User/Src/: lcd_test.c  protocol_parser.c  usart.c
platform/stm32/MDK-ARM/: STM32H750XBH6.uvprojx
platform/stm32/Src/: main.c  stm32h7xx_it.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
platform/stm32/USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h
plugins/jetbrains/: build.gradle.kts  settings.gradle.kts
plugins/jetbrains/src/main/kotlin/com/duoduojuzi/hermes/: LyricWidgetFactory.kt
plugins/vscode/: package-lock.json  package.json  tsconfig.json
plugins/vscode/src/: extension.ts
