[workspace]
resolver = "2"
members = [
    "modules/provider-api",
    "modules/provider-memory",
]

[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
provider-api = { path = "modules/provider-api" }
# 默认无法开启内存访问，只能通过 api 访问
provider-memory = { path = "modules/provider-memory", optional = true }
tokio = { version = "1.50.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3.32"
windows = { version = "0.62.2", features = ["Foundation", "Media_Control"] }
image = "0.24"
rusttype = "0.9"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
serialport = "4.2.0"

[features]
default = []
memory-access = ["dep:provider-memory"]
